--- a/.github/workflows/publish_tv_app_release.yaml
+++ b/.github/workflows/publish_tv_app_release.yaml
@@ -1,9 +1,10 @@
-name: app-build-action
+name: app-tv-build-action
 #推送Tag时触发
 on:
+  workflow_dispatch:
   push:
-    tags:
-      - "tv_*"
+    branches:
+      - 'master'
 jobs:
   build-tv:
     runs-on: macos-latest
@@ -21,13 +22,13 @@ jobs:
         uses: timheuer/base64-to-file@v1.2
         with:
           fileName: keystore.jks
-          encodedString: ${{ secrets.TV_KEYSTORE_BASE64 }}
+          encodedString: ${{ secrets.KEYSTORE_BASE64 }}
       - name: Create key.properties
         run: |
           echo "storeFile=${{ steps.android_tv_keystore.outputs.filePath }}" > simple_live_tv_app/android/key.properties
-          echo "storePassword=${{ secrets.TV_STORE_PASSWORD }}" >> simple_live_tv_app/android/key.properties
-          echo "keyPassword=${{ secrets.TV_KEY_PASSWORD }}" >> simple_live_tv_app/android/key.properties
-          echo "keyAlias=${{ secrets.TV_KEY_ALIAS }}" >> simple_live_tv_app/android/key.properties
+          echo "storePassword=${{ secrets.STORE_PASSWORD }}" >> simple_live_tv_app/android/key.properties
+          echo "keyPassword=${{ secrets.KEY_PASSWORD }}" >> simple_live_tv_app/android/key.properties
+          echo "keyAlias=${{ secrets.KEY_ALIAS }}" >> simple_live_tv_app/android/key.properties
 
       # 设置JAVA环境
       - uses: actions/setup-java@v4
@@ -78,12 +79,12 @@ jobs:
     
       #上传至Release
       - name: Upload Release
-        uses: softprops/action-gh-release@v1
+        uses: softprops/action-gh-release@v2
         with:
+          tag_name: V${{ fromJson(steps.version.outputs.content).version }}
           name: "${{ fromJson(steps.version.outputs.content).version }}"
           body: "# Android TV \n${{ fromJson(steps.version.outputs.content).version_desc }}"
           prerelease: ${{ fromJson(steps.version.outputs.content).prerelease }}
-          token: ${{ secrets.TOKEN }}
           files: |
             simple_live_tv_app/build/app/outputs/flutter-apk/app-x86_64-release.apk
             simple_live_tv_app/build/app/outputs/flutter-apk/app-arm64-v8a-release.apk
